# pltx

./: .gitignore  FULL_DOCUMENTATION.md  LICENSE  README.md  __init__.py  pyplot.py  pyproject.toml  style.py
cmap/: register_cmap.py
examples/: 01_basic_usage.py  03_advanced_panels.py  05_direct_style_usage.py  generate_readme_images.py  paper_plot_nature.py  pasqal_plot.py  showcase.py
examples/basic_examples/: 01_basic_usage.py  02_color_palettes.py  02_color_palettes_pasqal.py  04_color_cycling.py
examples/more_examples/: test_pltx.py  test_pltx_centerline.py  test_pltx_outline.py  test_pltx_progressive_width.py  test_verify_enhancements.py
examples/nature_examples/: paper_plot_localized_style.py  paper_plot_subplots.py
notebooks/: new_user_mpl_vs_matplotlibx.ipynb  showcase.ipynb  showcase_latex.ipynb  showcase_pasqal.ipynb
pltx/: __init__.py  colors.py  pyplot.py  rcparams.py  style.py
pltx/cmap/: __init__.py  pasqal_cmap.npy  pasqal_contrast_cmap.npy  pasqal_diverging.npy  register_cmap.py
tests/: test_colors.py  test_pltx_all_plots.py  test_pltx_colorblind.py  test_pyplot.py  test_rcparams.py  test_style.py
