[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matplotlibx"
version = "0.1.3"
authors = [
  { name="Igor Sokolov", email="sokolov.igor.ch@gmail.com" },
]
description = "Enhanced Matplotlib wrapper with publication-quality styling and colorblind accessibility"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
all = ["seaborn>=0.11.0"]

[project.urls]
"Homepage" = "https://github.com/Brogis1/pltx"
"Bug Tracker" = "https://github.com/Brogis1/pltx/issues"

[tool.setuptools]
packages = ["pltx", "pltx.cmap"]

[tool.setuptools.package-data]
"pltx.cmap" = ["*.npy"]
